layout bug fixes

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,26 @@
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-front-smoothing: grayscale;
+  scrollbar-width: auto;
+  scrollbar-color: var(--purple-200) var(--purple-100);
+}
+
+*::-webkit-scrollbar {
+  width: .8rem;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--purple-100);
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--purple-200);
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: var(--puple-900);
 }
 
 :root {
@@ -29,7 +49,6 @@ body {
   background: var(--puple-900);
   font-family: 'Inter', sans-serif;
   font-size: 1.6rem;
-  overflow: hidden;
 }
 
 :focus {
@@ -75,6 +94,9 @@ aside nav .menu .menu-item:hover {
 
 main {
   flex: 1;
+  display: grid;
+  gap: 3.2rem;
+  grid-template-rows: max-content max-content 1fr;
   height: calc(100vh - .4rem);
   background: var(--gray-100);
   margin-top: .4rem;
@@ -119,7 +141,6 @@ main form {
   display: flex;
   align-items: center;
   gap: 1.6rem;
-  margin-top: 3.2rem;
 }
 
 main form button {
@@ -174,29 +195,30 @@ main form .input-wrapper ion-icon {
 }
 
 main .content {
-  display: flex;
+  display: grid;
   gap: 4.8rem;
-  margin-top: 3.2rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
 main .content .todo,
 main .content .working,
 main .content .done {
-  padding: 2.4rem;
-}
-
-main .content .board-cards {
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
-  margin-top: 2.4rem;
-  overflow-y: auto;
+  padding: 2.4rem;
+}
+
+
+main .content .board-cards {
+  display: grid;
+  gap: 2.4rem;
 }
 
 main .content .board-cards .card {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 0;
+  display: grid;
+  grid-template-rows: max-content 1fr max-content;
   gap: 1rem;
   background: var(--white);
   color: var(--brown-100);
@@ -212,8 +234,7 @@ main .content .board-cards .card h5 {
 }
 
 main .content .board-cards .card p {
-  width: 27.2rem;
-  height: 4.5rem;
+
   overflow: hidden;
   white-space: pre-wrap;
   text-overflow: ellipsis;
